1、加入form 表单验证机制 2、使用axios 作为ajax 请求工具 3、加入cookie 读写操作

--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "files": [],
   "dependencies": {
+    "axios": "^0.18.0",
     "element-ui": "^2.3.3",
+    "js-cookie": "^2.2.0",
     "nprogress": "^0.2.0",
     "vue": "^2.5.3",
     "vue-easytable": "^1.5.1",
