--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.18.0",
     "element-ui": "^2.3.3",
     "js-cookie": "^2.2.0",
+    "mockjs": "^1.0.1-beta3",
     "nprogress": "^0.2.0",
     "vue": "^2.5.3",
     "vue-easytable": "^1.5.1",
